# phobos

./: meson.build
etc/c/: curl.d
std/: ascii.d  base64.d  checkedint.d  concurrency.d  exception.d  file.d  math.d  mmfile.d  parallelism.d  path.d  process.d  socket.d  stdio.d  zip.d  zlib.d
std/algorithm/: searching.d
std/datetime/: systime.d  timezone.d
std/experimental/allocator/: common.d  mallocator.d  mmap_allocator.d  showcase.d  typed.d
std/experimental/allocator/building_blocks/: ascending_page_allocator.d  kernighan_ritchie.d  stats_collector.d
std/internal/math/: biguintarm.d
std/logger/: core.d  filelogger.d  multilogger.d
std/math/: hardware.d
std/net/: curl.d
std/range/: package.d
