project('phobos', 'd')

src = files(
    'etc/c/curl.d',
    'etc/c/odbc/sql.d',
    'etc/c/odbc/sqlext.d',
    'etc/c/odbc/sqltypes.d',
    'etc/c/odbc/sqlucode.d',
    'etc/c/sqlite3.d',
    'etc/c/zlib.d',
    'std/algorithm/comparison.d',
    'std/algorithm/internal.d',
    'std/algorithm/iteration.d',
    'std/algorithm/mutation.d',
    'std/algorithm/package.d',
    'std/algorithm/searching.d',
    'std/algorithm/setops.d',
    'std/algorithm/sorting.d',
    'std/array.d',
    'std/ascii.d',
    'std/base64.d',
    'std/bigint.d',
    'std/bitmanip.d',
    'std/compiler.d',
    'std/complex.d',
    'std/concurrency.d',
    'std/container/array.d',
    'std/container/binaryheap.d',
    'std/container/dlist.d',
    'std/container/package.d',
    'std/container/rbtree.d',
    'std/container/slist.d',
    'std/container/util.d',
    'std/conv.d',
    'std/csv.d',
    'std/datetime/date.d',
    'std/datetime/interval.d',
    'std/datetime/package.d',
    'std/datetime/stopwatch.d',
    'std/datetime/systime.d',
    'std/datetime/timezone.d',
    'std/demangle.d',
    'std/digest/crc.d',
    'std/digest/digest.d',
    'std/digest/hmac.d',
    'std/digest/md.d',
    'std/digest/murmurhash.d',
    'std/digest/package.d',
    'std/digest/ripemd.d',
    'std/digest/sha.d',
    'std/encoding.d',
    'std/exception.d',
    'std/experimental/allocator/building_blocks/affix_allocator.d',
    'std/experimental/allocator/building_blocks/aligned_block_list.d',
    'std/experimental/allocator/building_blocks/allocator_list.d',
    'std/experimental/allocator/building_blocks/ascending_page_allocator.d',
    'std/experimental/allocator/building_blocks/bitmapped_block.d',
    'std/experimental/allocator/building_blocks/bucketizer.d',
    'std/experimental/allocator/building_blocks/fallback_allocator.d',
    'std/experimental/allocator/building_blocks/free_list.d',
    'std/experimental/allocator/building_blocks/free_tree.d',
    'std/experimental/allocator/building_blocks/kernighan_ritchie.d',
    'std/experimental/allocator/building_blocks/null_allocator.d',
    'std/experimental/allocator/building_blocks/package.d',
    'std/experimental/allocator/building_blocks/quantizer.d',
    'std/experimental/allocator/building_blocks/region.d',
    'std/experimental/allocator/building_blocks/scoped_allocator.d',
    'std/experimental/allocator/building_blocks/segregator.d',
    'std/experimental/allocator/building_blocks/stats_collector.d',
    'std/experimental/allocator/common.d',
    'std/experimental/allocator/gc_allocator.d',
    'std/experimental/allocator/mallocator.d',
    'std/experimental/allocator/mmap_allocator.d',
    'std/experimental/allocator/package.d',
    'std/experimental/allocator/showcase.d',
    'std/experimental/allocator/typed.d',
    'std/experimental/checkedint.d',
    'std/experimental/logger/core.d',
    'std/experimental/logger/filelogger.d',
    'std/experimental/logger/multilogger.d',
    'std/experimental/logger/nulllogger.d',
    'std/experimental/logger/package.d',
    'std/experimental/typecons.d',
#    'std/file.d',
    'std/format/internal/floats.d',
    'std/format/internal/read.d',
    'std/format/internal/write.d',
    'std/format/package.d',
#    'std/format/read.d',
#    'std/format/spec.d',
#    'std/format/write.d',
    'std/functional.d',
    'std/getopt.d',
    'std/internal/attributes.d',
    'std/internal/cstring.d',
    'std/internal/digest/sha_SSSE3.d',
    'std/internal/math/biguintcore.d',
    'std/internal/math/biguintnoasm.d',
    'std/internal/math/biguintx86.d',
    'std/internal/math/errorfunction.d',
    'std/internal/math/gammafunction.d',
    'std/internal/memory.d',
    'std/internal/scopebuffer.d',
    'std/internal/test/dummyrange.d',
    'std/internal/test/range.d',
    'std/internal/test/uda.d',
    'std/internal/unicode_comp.d',
    'std/internal/unicode_decomp.d',
    'std/internal/unicode_grapheme.d',
    'std/internal/unicode_norm.d',
    'std/internal/unicode_tables.d',
    'std/internal/windows/advapi32.d',
    'std/json.d',
    'std/mathspecial.d',
#    'std/math/algebraic.d',
#    'std/math/constants.d',
#    'std/math/exponential.d',
#    'std/math/hardware.d',
#    'std/math/operations.d',
#    'std/math/package.d',
#    'std/math/remainder.d',
#    'std/math/rounding.d',
#    'std/math/traits.d',
#    'std/math/trigonometry.d',
    'std/meta.d',
    'std/mmfile.d',
    'std/net/curl.d',
    'std/net/isemail.d',
    'std/numeric.d',
    'std/outbuffer.d',
    'std/package.d',
    'std/parallelism.d',
#    'std/path.d',
    'std/process.d',
    'std/random.d',
    'std/range/interfaces.d',
    'std/range/package.d',
    'std/range/primitives.d',
    'std/regex/internal/backtracking.d',
    'std/regex/internal/generator.d',
    'std/regex/internal/ir.d',
    'std/regex/internal/kickstart.d',
    'std/regex/internal/parser.d',
    'std/regex/internal/tests2.d',
    'std/regex/internal/tests.d',
    'std/regex/internal/thompson.d',
    'std/regex/package.d',
    'std/signals.d',
#    'std/socket.d',
    'std/stdint.d',
#    'std/stdio.d',
    'std/string.d',
#    'std/sumtype.d',
    'std/system.d',
    'std/traits.d',
    'std/typecons.d',
    'std/typetuple.d',
    'std/uni/package.d',
    'std/uri.d',
    'std/utf.d',
    'std/uuid.d',
    'std/variant.d',
    'std/windows/charset.d',
    'std/windows/registry.d',
    'std/windows/syserror.d',
    'std/xml.d',
    'std/zip.d',
    'std/zlib.d',
)

include_directories = include_directories('.')

phobos_dep = declare_dependency(
    sources: src,
    include_directories: include_directories,
)
